--- a/02_listas_e_ele.html
+++ b/02_listas_e_ele.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <title>Listas com CSS Interno</title>
     <style>
-        /* CSS Interno: estilos dentro da tag <style> */
+        body {
+            font-family: 'Segoe UI';
+            background-color: #1bd22e;
+            margin: 2opx;
+        }
+        h1 {
+            color: crimson;
+            border-bottom: 8px solid rgb(251, 223, 12);
+        }
+        h2 {color: purple;background-color: orange;}
+
+        /* Estilo das listas */
+        ul {
+            background-color: aqua;
+            padding: 20px;
+            border-left: 4px solid blue;
+            margin-left: 150px;
+            padding-left: 100px;
+            margin-top: 100px;
 
 
-        /* Digitação (Aqui) */
+        }
 
     </style>
 </head>
