--- a/01_estrutura_e_texto.html
+++ b/01_estrutura_e_texto.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Exemplo de Estrutura HTML</title>
 </head>
-<body>
-    <h1>Olá Mundo!</h1>
-    <p>Esse é um parágrafo simples em HTML.</p>
+<body style="background-color: #3dc83b;">
+    <h1 style="background-color: rgb(255, 251, 0);color: crimson;font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 50px;padding: 30px; text-align: center;">Olá Mundo!</h1>
+
+    <p style="border: 3px dotted red; width: 200px; height: 50px">Esse é um parágrafo simples em HTML.</p>
     <p><strong>Texto em negrito</strong> e <em>texto em itálico</em>.</p>
 </body>
 </html>
