--- a/08_tab_multimidea.html
+++ b/08_tab_multimidea.html
@@ -58,7 +58,7 @@
     <hr>
 
     <h2>Vamos aprender a reproduzir áudios em HTML5.</h2>
-    <audio class="player-audio" preload="metadata" autoplay controls>
+    <audio class="audio2" preload="metadata" autoplay controls>
         <source src="assets/happy-mistake.mp3" type="audio/mpeg">
         Seu navegador não suporta áudio HTML5.
     </audio>
